--- a/ref/msal-core/classes/_scopeset_.scopeset.html
+++ b/ref/msal-core/classes/_scopeset_.scopeset.html
@@ -85,10 +85,11 @@
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="_scopeset_.scopeset.html#containsscope" class="tsd-kind-icon">contains<wbr>Scope</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="_scopeset_.scopeset.html#converttolowercase" class="tsd-kind-icon">convert<wbr>ToLower<wbr>Case</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="_scopeset_.scopeset.html#isintersectingscopes" class="tsd-kind-icon">is<wbr>Intersecting<wbr>Scopes</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="_scopeset_.scopeset.html#parsescope" class="tsd-kind-icon">parse<wbr>Scope</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="_scopeset_.scopeset.html#removeelement" class="tsd-kind-icon">remove<wbr>Element</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="_scopeset_.scopeset.html#trimandconvertarraytolowercase" class="tsd-kind-icon">trim<wbr>And<wbr>Convert<wbr>Array<wbr>ToLower<wbr>Case</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="_scopeset_.scopeset.html#trimandconverttolowercase" class="tsd-kind-icon">trim<wbr>And<wbr>Convert<wbr>ToLower<wbr>Case</a></li>
 							</ul>
 						</section>
 					</div>
@@ -106,7 +107,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/ScopeSet.ts#L34">src/ScopeSet.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/ScopeSet.ts#L35">src/ScopeSet.ts:35</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -126,36 +127,6 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-static">
-					<a name="converttolowercase" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagStatic">Static</span> convert<wbr>ToLower<wbr>Case</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static">
-						<li class="tsd-signature tsd-kind-icon">convert<wbr>ToLower<wbr>Case<span class="tsd-signature-symbol">(</span>scopes<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/ScopeSet.ts#L45">src/ScopeSet.ts:45</a></li>
-								</ul>
-							</aside>
-							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>toLower</p>
-								</div>
-							</div>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>scopes: <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h5>
-									<div class="tsd-comment tsd-typography">
-									</div>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -202,7 +173,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/ScopeSet.ts#L64">src/ScopeSet.ts:64</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/ScopeSet.ts#L75">src/ScopeSet.ts:75</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -232,7 +203,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/ScopeSet.ts#L56">src/ScopeSet.ts:56</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/ScopeSet.ts#L66">src/ScopeSet.ts:66</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -252,6 +223,64 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-static">
+					<a name="trimandconvertarraytolowercase" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagStatic">Static</span> trim<wbr>And<wbr>Convert<wbr>Array<wbr>ToLower<wbr>Case</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static">
+						<li class="tsd-signature tsd-kind-icon">trim<wbr>And<wbr>Convert<wbr>Array<wbr>ToLower<wbr>Case<span class="tsd-signature-symbol">(</span>scopes<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/ScopeSet.ts#L55">src/ScopeSet.ts:55</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Performs trimeAndConvertToLowerCase on string array</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>scopes: <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h5>
+									<div class="tsd-comment tsd-typography">
+									</div>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-static">
+					<a name="trimandconverttolowercase" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagStatic">Static</span> trim<wbr>And<wbr>Convert<wbr>ToLower<wbr>Case</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static">
+						<li class="tsd-signature tsd-kind-icon">trim<wbr>And<wbr>Convert<wbr>ToLower<wbr>Case<span class="tsd-signature-symbol">(</span>scope<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/ScopeSet.ts#L47">src/ScopeSet.ts:47</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p> Trims and converts string to lower case</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>scope: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -279,9 +308,6 @@
 								<a href="_scopeset_.scopeset.html#containsscope" class="tsd-kind-icon">contains<wbr>Scope</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static">
-								<a href="_scopeset_.scopeset.html#converttolowercase" class="tsd-kind-icon">convert<wbr>ToLower<wbr>Case</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static">
 								<a href="_scopeset_.scopeset.html#isintersectingscopes" class="tsd-kind-icon">is<wbr>Intersecting<wbr>Scopes</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static">
@@ -289,6 +315,12 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static">
 								<a href="_scopeset_.scopeset.html#removeelement" class="tsd-kind-icon">remove<wbr>Element</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static">
+								<a href="_scopeset_.scopeset.html#trimandconvertarraytolowercase" class="tsd-kind-icon">trim<wbr>And<wbr>Convert<wbr>Array<wbr>ToLower<wbr>Case</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static">
+								<a href="_scopeset_.scopeset.html#trimandconverttolowercase" class="tsd-kind-icon">trim<wbr>And<wbr>Convert<wbr>ToLower<wbr>Case</a>
 							</li>
 						</ul>
 					</li>
