--- a/ref/msal-core/interfaces/_error_clientconfigurationerror_.iclientconfigurationerrormessage.html
+++ b/ref/msal-core/interfaces/_error_clientconfigurationerror_.iclientconfigurationerrormessage.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;authority/B2cAuthority&quot; | msal</title>
+	<title>IClientConfigurationErrorMessage | msal</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,38 +56,60 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="_authority_b2cauthority_.html">&quot;authority/B2cAuthority&quot;</a>
+					<a href="../modules/_error_clientconfigurationerror_.html">&quot;error/ClientConfigurationError&quot;</a>
+				</li>
+				<li>
+					<a href="_error_clientconfigurationerror_.iclientconfigurationerrormessage.html">IClientConfigurationErrorMessage</a>
 				</li>
 			</ul>
-			<h1>External module &quot;authority/B2cAuthority&quot;</h1>
+			<h1>Interface IClientConfigurationErrorMessage</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-hierarchy">
+				<h3>Hierarchy</h3>
+				<ul class="tsd-hierarchy">
+					<li>
+						<span class="target">IClientConfigurationErrorMessage</span>
+					</li>
+				</ul>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
-							<h3>Variables</h3>
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_authority_b2cauthority_.html#b2ctrustedhostlist" class="tsd-kind-icon">B2CTrusted<wbr>Host<wbr>List</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_error_clientconfigurationerror_.iclientconfigurationerrormessage.html#code" class="tsd-kind-icon">code</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_error_clientconfigurationerror_.iclientconfigurationerrormessage.html#desc" class="tsd-kind-icon">desc</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Variables</h2>
-				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
-					<a name="b2ctrustedhostlist" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagConst">Const</span> B2CTrusted<wbr>Host<wbr>List</h3>
-					<div class="tsd-signature tsd-kind-icon">B2CTrusted<wbr>Host<wbr>List<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+					<a name="code" class="tsd-anchor"></a>
+					<h3>code</h3>
+					<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/authority/B2cAuthority.ts#L12">src/authority/B2cAuthority.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/ClientConfigurationError.ts#L11">src/error/ClientConfigurationError.ts:11</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+					<a name="desc" class="tsd-anchor"></a>
+					<h3>desc</h3>
+					<div class="tsd-signature tsd-kind-icon">desc<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/ClientConfigurationError.ts#L12">src/error/ClientConfigurationError.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -100,14 +122,32 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_authority_b2cauthority_.html">&quot;authority/<wbr>B2c<wbr>Authority&quot;</a>
+						<a href="../modules/_error_clientconfigurationerror_.html">&quot;error/<wbr>Client<wbr>Configuration<wbr>Error&quot;</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="_authority_b2cauthority_.html#b2ctrustedhostlist" class="tsd-kind-icon">B2CTrusted<wbr>Host<wbr>List</a>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module">
+						<a href="../classes/_error_clientconfigurationerror_.clientconfigurationerror.html" class="tsd-kind-icon">Client<wbr>Configuration<wbr>Error</a>
+					</li>
+				</ul>
+				<ul class="current">
+					<li class="current tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_error_clientconfigurationerror_.iclientconfigurationerrormessage.html" class="tsd-kind-icon">IClient<wbr>Configuration<wbr>Error<wbr>Message</a>
+						<ul>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+								<a href="_error_clientconfigurationerror_.iclientconfigurationerrormessage.html#code" class="tsd-kind-icon">code</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+								<a href="_error_clientconfigurationerror_.iclientconfigurationerrormessage.html#desc" class="tsd-kind-icon">desc</a>
+							</li>
+						</ul>
+					</li>
+				</ul>
+				<ul class="after-current">
+					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
+						<a href="../modules/_error_clientconfigurationerror_.html#clientconfigurationerrormessage" class="tsd-kind-icon">Client<wbr>Configuration<wbr>Error<wbr>Message</a>
 					</li>
 				</ul>
 			</nav>
