--- a/ref/msal-core/modules/_telemetry_telemetryutils_.html
+++ b/ref/msal-core/modules/_telemetry_telemetryutils_.html
@@ -73,9 +73,12 @@
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_telemetry_telemetryutils_.html#endbrowserperformancemeasurement" class="tsd-kind-icon">end<wbr>Browser<wbr>Performance<wbr>Measurement</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_telemetry_telemetryutils_.html#hashpersonalidentifier" class="tsd-kind-icon">hash<wbr>Personal<wbr>Identifier</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_telemetry_telemetryutils_.html#prependeventnameprefix" class="tsd-kind-icon">prepend<wbr>Event<wbr>Name<wbr>Prefix</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_telemetry_telemetryutils_.html#scrubtenantfromuri" class="tsd-kind-icon">scrub<wbr>Tenant<wbr>From<wbr>Uri</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_telemetry_telemetryutils_.html#startbrowserperformancemeasurement" class="tsd-kind-icon">start<wbr>Browser<wbr>Performance<wbr>Measurement</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_telemetry_telemetryutils_.html#supportsbrowserperformance" class="tsd-kind-icon">supports<wbr>Browser<wbr>Performance</a></li>
 							</ul>
 						</section>
 					</div>
@@ -83,6 +86,35 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="endbrowserperformancemeasurement" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> end<wbr>Browser<wbr>Performance<wbr>Measurement</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">end<wbr>Browser<wbr>Performance<wbr>Measurement<span class="tsd-signature-symbol">(</span>measureName<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, startMark<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, endMark<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryUtils.ts#L51">src/telemetry/TelemetryUtils.ts:51</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>measureName: <span class="tsd-signature-type">string</span></h5>
+								</li>
+								<li>
+									<h5>startMark: <span class="tsd-signature-type">string</span></h5>
+								</li>
+								<li>
+									<h5>endMark: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
 					<a name="hashpersonalidentifier" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagConst">Const</span> hash<wbr>Personal<wbr>Identifier</h3>
@@ -152,6 +184,46 @@
 						</li>
 					</ul>
 				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="startbrowserperformancemeasurement" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> start<wbr>Browser<wbr>Performance<wbr>Measurement</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">start<wbr>Browser<wbr>Performance<wbr>Measurement<span class="tsd-signature-symbol">(</span>startMark<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryUtils.ts#L62">src/telemetry/TelemetryUtils.ts:62</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>startMark: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="supportsbrowserperformance" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> supports<wbr>Browser<wbr>Performance</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">supports<wbr>Browser<wbr>Performance<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryUtils.ts#L44">src/telemetry/TelemetryUtils.ts:44</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
+						</li>
+					</ul>
+				</section>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -168,6 +240,9 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_telemetry_telemetryutils_.html#endbrowserperformancemeasurement" class="tsd-kind-icon">end<wbr>Browser<wbr>Performance<wbr>Measurement</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_telemetry_telemetryutils_.html#hashpersonalidentifier" class="tsd-kind-icon">hash<wbr>Personal<wbr>Identifier</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
@@ -175,6 +250,12 @@
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_telemetry_telemetryutils_.html#scrubtenantfromuri" class="tsd-kind-icon">scrub<wbr>Tenant<wbr>From<wbr>Uri</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_telemetry_telemetryutils_.html#startbrowserperformancemeasurement" class="tsd-kind-icon">start<wbr>Browser<wbr>Performance<wbr>Measurement</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_telemetry_telemetryutils_.html#supportsbrowserperformance" class="tsd-kind-icon">supports<wbr>Browser<wbr>Performance</a>
 					</li>
 				</ul>
 			</nav>
